[gd_scene load_steps=16 format=2]

[ext_resource path="res://tracks/startscreen.png" type="Texture" id=1]
[ext_resource path="res://otherart/arrowbutton.png" type="Texture" id=2]
[ext_resource path="res://otherart/playpressed.png" type="Texture" id=3]
[ext_resource path="res://otherart/dirttrackicon.png" type="Texture" id=4]
[ext_resource path="res://otherart/arrowhover.png" type="Texture" id=5]
[ext_resource path="res://otherart/arowpressed.png" type="Texture" id=6]
[ext_resource path="res://otherart/playbutton.png" type="Texture" id=7]
[ext_resource path="res://otherart/playhover.png" type="Texture" id=8]
[ext_resource path="res://scripts/startscreen.gd" type="Script" id=9]
[ext_resource path="res://vehicles/ute.png" type="Texture" id=10]
[ext_resource path="res://otherart/graveltrackicon.png" type="Texture" id=11]
[ext_resource path="res://scripts/exitbutton.gd" type="Script" id=12]
[ext_resource path="res://otherart/exitbutton.png" type="Texture" id=13]
[ext_resource path="res://otherart/exithover.png" type="Texture" id=14]
[ext_resource path="res://otherart/exitpressed.png" type="Texture" id=15]

[node name="Node2D" type="Node2D"]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 875, 525 )
texture = ExtResource( 1 )

[node name="playbutton" type="TextureButton" parent="."]
margin_left = 210.0
margin_top = 770.0
margin_right = 490.0
margin_bottom = 910.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 8 )

[node name="Ute" type="Sprite" parent="."]
position = Vector2( 1400, 560 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="trackpicker" type="Node2D" parent="."]

[node name="trackleft" type="TextureButton" parent="trackpicker"]
margin_left = 83.0
margin_top = 520.0
margin_right = 163.0
margin_bottom = 600.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="trackright" type="TextureButton" parent="trackpicker"]
margin_left = 617.0
margin_top = 600.0
margin_right = 697.0
margin_bottom = 680.0
rect_rotation = 180.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="Dirttrackicon" type="Sprite" parent="trackpicker"]
position = Vector2( 350, 560 )
texture = ExtResource( 4 )

[node name="Graveltrackicon" type="Sprite" parent="trackpicker"]
position = Vector2( 350, 560 )
texture = ExtResource( 11 )

[node name="carpicker" type="Node2D" parent="."]

[node name="carleft" type="TextureButton" parent="carpicker"]
margin_left = 1132.0
margin_top = 520.0
margin_right = 1212.0
margin_bottom = 600.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="TextureButton" type="TextureButton" parent="carpicker"]
margin_left = 1667.0
margin_top = 600.0
margin_right = 1747.0
margin_bottom = 680.0
rect_rotation = 180.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="exitbutton" type="TextureButton" parent="."]
margin_left = 1700.0
margin_top = 17.0
margin_right = 1732.0
margin_bottom = 49.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 14 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="tree_entered" from="." to="." method="_on_Node2D_tree_entered"]
[connection signal="pressed" from="playbutton" to="." method="_on_playbutton_pressed"]
[connection signal="pressed" from="trackpicker/trackleft" to="." method="_on_trackleft_pressed"]
[connection signal="pressed" from="trackpicker/trackright" to="." method="_on_trackright_pressed"]
[connection signal="pressed" from="exitbutton" to="exitbutton" method="_on_exitbutton_pressed"]
